big update user model view controller