@@ -5,17 +5,16 @@ import org.springframework.ai.document.Document;
 import org.springframework.ai.vectorstore.VectorStore;
 import org.springframework.stereotype.Service;
 
+import java.util.Collections;
 import java.util.List;
-import java.util.Map;
 
 @RequiredArgsConstructor
 @Service
 public class VectorStoreService {
     private final VectorStore vectorStore;
 
-    public void saveToVectorStore(String content, String type) {
-        Map<String, Object> metadata = Map.of("type", type);
-        Document document = new Document(content, metadata);
+    public void saveToVectorStore(String content) {
+        Document document = new Document(content, Collections.emptyMap());
         vectorStore.add(List.of(document));
     }
 
